<resources>
    <string name="app_name" translatable="false">Github Person</string>
    <string name="username">Username</string>
    <string name="company">Company</string>
    <string name="name">Name</string>
    <string name="strip" translatable="false">-</string>
    <string name="followers">Followers</string>
    <string name="following">Following</string>
    <string name="repository">Repository</string>
    <string name="location">Location</string>
    <string name="search">Search</string>
    <string name="search_hint">Enter Name</string>
    <string name="location_unknown">Location Unknown</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="wording_unknown_users">Please, click the search button on action bar to find github users</string>
    <string name="wording_unknown_follow">Users not found</string>
    <string name="language">Language</string>
    <string name="detail_person">Detail Person</string>
    <string name="toast_add_fav">Succes add to favorite users</string>
    <string name="toast_del_fav">Deleted from favorite users</string>
    <string name="users_favorite">Users Favorite</string>
    <string name="settings">Settings</string>
    <string name="settings_language">Settings Language</string>
    <string name="set_reminder">Set Reminder</string>
    <string name="wording_alarm_on">Turn on daily reminders</string>
    <string name="wording_alarm_off">Turn off daily reminders</string>
    <string name="appwidget_text">Users Favorite</string>
    <string name="empty_text">There\'s no favorite users</string>
</resources>