<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/detailAppbarLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="4dp"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/white"
                android:orientation="vertical"
                android:padding="16dp"
                app:layout_scrollFlags="scroll|snap">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="300dp"
                    android:background="@drawable/bg_rounded_black">

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/iv_detail_avatar"
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:layout_marginTop="16dp"
                        app:civ_border_color="@android:color/white"
                        app:civ_border_width="1dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/txtDetailName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="7dp"
                        android:text="@string/name"
                        android:textColor="@android:color/white"
                        android:textSize="16sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/iv_detail_avatar" />

                    <TextView
                        android:id="@+id/txtDetailUsername"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="9dp"
                        android:text="@string/username"
                        android:textColor="@android:color/white"
                        android:textSize="14sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/txtDetailName" />

                    <TextView
                        android:id="@+id/txtDetailLocation"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="8dp"
                        android:drawableStart="@drawable/ic_baseline_place_24"
                        android:drawablePadding="4dp"
                        android:text="@string/location"
                        android:textColor="@android:color/white"
                        android:textSize="14sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/txtDetailUsername" />

                    <View
                        android:id="@+id/view"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginHorizontal="16dp"
                        android:layout_marginTop="16dp"
                        android:background="@android:color/white"
                        app:layout_constraintTop_toBottomOf="@+id/txtDetailLocation"
                        tools:layout_editor_absoluteX="16dp" />

                    <LinearLayout
                        android:id="@+id/linearLayout"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_marginTop="8dp"
                        android:orientation="horizontal"
                        android:padding="8dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/view"
                        android:baselineAligned="false">

                        <androidx.constraintlayout.widget.ConstraintLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1">

                            <TextView
                                android:id="@+id/textView2"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/followers"
                                android:textColor="@android:color/white"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toTopOf="parent" />

                            <TextView
                                android:id="@+id/txtFollowers"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/strip"
                                android:textColor="@android:color/white"
                                app:layout_constraintBottom_toBottomOf="parent"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toBottomOf="@+id/textView2" />

                        </androidx.constraintlayout.widget.ConstraintLayout>

                        <androidx.constraintlayout.widget.ConstraintLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1">

                            <TextView
                                android:id="@+id/textView3"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/following"
                                android:textColor="@android:color/white"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toTopOf="parent" />

                            <TextView
                                android:id="@+id/txtFollowing"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/strip"
                                android:textColor="@android:color/white"
                                app:layout_constraintBottom_toBottomOf="parent"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toBottomOf="@+id/textView3" />

                        </androidx.constraintlayout.widget.ConstraintLayout>

                        <androidx.constraintlayout.widget.ConstraintLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1">

                            <TextView
                                android:id="@+id/textView4"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/repository"
                                android:textColor="@android:color/white"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toTopOf="parent" />

                            <TextView
                                android:id="@+id/txtRepository"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/strip"
                                android:textColor="@android:color/white"
                                app:layout_constraintBottom_toBottomOf="parent"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toBottomOf="@+id/textView4" />

                        </androidx.constraintlayout.widget.ConstraintLayout>

                    </LinearLayout>

                </androidx.constraintlayout.widget.ConstraintLayout>

            </LinearLayout>

            <com.google.android.material.tabs.TabLayout
                android:id="@+id/detailTabLayout"
                android:layout_width="match_parent"
                android:layout_height="47dp"
                android:background="@android:color/white"
                app:tabIndicatorColor="@color/colorBlack"
                app:tabSelectedTextColor="@color/colorBlack"
                app:tabTextAppearance="@style/detail_tab_text"
                app:tabTextColor="@color/colorGrey" />

        </com.google.android.material.appbar.AppBarLayout>

        <androidx.core.widget.NestedScrollView
            android:id="@+id/detailNestedScrollView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <androidx.viewpager.widget.ViewPager
                android:id="@+id/detailViewPager"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/white"/>

        </androidx.core.widget.NestedScrollView>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/btnFavorite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:backgroundTint="@android:color/white"
            android:layout_margin="20dp"
            app:borderWidth="0dp"
            android:src="@drawable/ic_favorite_add"/>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:visibility="gone" />

</LinearLayout>